# startup-connect

./: .gitignore  LICENSE.md  README.md  Startup Repository Project Plan(1).markdown  docker-compose.yml  main.py  project-milestone.md  pyproject.toml  sample-startup.json
backend/app/: .env.local  alembic.ini  as.csv  backend_pre_start.py  complete-setup.md  initial_data.py  main.py  pyproject.toml  requirements.txt  test_password_reset.py
backend/app/algo/: startup-prediction.py
backend/app/api/: deps.py  main.py
backend/app/api/endpoints/: admin.py  auth.py  investor.py  pitch.py  recommendations.py  startups.py  upload.py  user.py  users.py
backend/app/core/: config.py  database.py  db.py  email.py  security.py  upload.py
backend/app/core/storage/: README.md  base.py  factory.py  gcs_client.py  minio_client.py  s3_client.py
backend/app/crud/: investor.py  pitch.py  startup.py  user.py
backend/app/docs/: password_reset.md
backend/app/migration/: env.py
backend/app/migration/versions/: 087394feae48_new_initial_migrations.py  220e24ddac5e_add_is_published_to_startup.py  6d5b798dd226_add_missing_industry_enum_values.py  888eef3191de_add_missing_funding_stage_enum_values.py  a48f33b900c7_add_investorprofile_pitchdeck_and_.py  d6bfa3df105a_initial_migration.py  e3d680380c10_standardize_enum_values_to_proper_case.py  f02892a2c96a_add_demo_video_url_to_startup.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: b81e470172ae_initial_migration.py  (+3 more)
backend/app/models/: __init__.py  investor.py  pitch.py  startup.py  upload.py  user.py
backend/app/schemas/: startup.py  user.py
backend/app/scripts/: seed_investors.py
backend/app/services/: recommendation_engine.py
deprecate/backend/: migrate.py  pyproject.toml
deprecate/backend/app/: main.py
deprecate/backend/docs/: ASYNC_DATABASE_SETUP.md  _auth.py  investor_api.md
(+591 files in other folders)
