[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "resend>=2.10.0",
    "sqlmodel>=0.0.24",
    "tenacity>=9.1.2",
    "boto3>=1.35.88",
    "pillow>=11.1.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.19",
    "minio>=7.2.8",
]
